--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -13,4 +13,9 @@
   --shadow-btn-color: rgba(0, 0, 0, 0.15);
   --icon-color: #afb1b8;
   --time-function: cubic-bezier(0.4, 0, 0.2, 1);
+  --hero-gradient: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    )
 }
