--- a/css/main.css
+++ b/css/main.css
@@ -282,7 +282,7 @@ img {
   fill: currentColor;
   font-weight: 500;
   font-size: 12px;
-  line-height: 1.1666666667;
+  line-height: 1.17;
   letter-spacing: 0.02em;
   -webkit-transition: color 250ms var(--time-function);
   transition: color 250ms var(--time-function);
@@ -290,7 +290,7 @@ img {
 @media screen and (min-width: 1200px) {
   .header__address-link {
     font-size: 14px;
-    line-height: 1.1428571429;
+    line-height: 1.14;
   }
 }
 .header__address-link:hover, .header__address-link:focus {
@@ -312,7 +312,7 @@ img {
 }
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero {
-    background-image: var(--hero-gradient), url(../img/hero2x-m.jpg);
+    background-image: var(--hero-gradient), url(../img/hero-m_2x.jpg);
   }
 }
 @media screen and (min-width: 768px) {
@@ -323,7 +323,7 @@ img {
 }
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: var(--hero-gradient), url(../img/hero2x-t.jpg);
+    background-image: var(--hero-gradient), url(../img/hero-t_2x.jpg);
   }
 }
 @media screen and (min-width: 1200px) {
@@ -681,6 +681,7 @@ img {
   border-color: var(--icon-color);
   -webkit-transition: background-color 250ms var(--time-function), color 250ms var(--time-function);
   transition: background-color 250ms var(--time-function), color 250ms var(--time-function);
+  fill: currentColor;
 }
 @media screen and (min-width: 1200px) {
   .client__link {
@@ -690,10 +691,6 @@ img {
 .client__link:hover, .client__link:focus {
   color: var(--accent-color);
   border-color: var(--accent-color);
-}
-
-.client-icon {
-  fill: currentColor;
 }
 
 .footer {
@@ -1073,6 +1070,14 @@ img {
   display: -ms-flexbox;
   display: flex;
   gap: 20px;
+}
+
+.mobile-menu__networks-item:not(:last-child)::after {
+  content: "";
+  width: 22px;
+  height: 0;
+  margin-left: 10px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
 }
 
 .mobile-menu__networks-link {
