--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -282,7 +282,7 @@ img {
   fill: currentColor;
   font-weight: 500;
   font-size: 12px;
-  line-height: 1.1666666667;
+  line-height: 1.17;
   letter-spacing: 0.02em;
   -webkit-transition: color 250ms var(--time-function);
   transition: color 250ms var(--time-function);
@@ -290,7 +290,7 @@ img {
 @media screen and (min-width: 1200px) {
   .header__address-link {
     font-size: 14px;
-    line-height: 1.1428571429;
+    line-height: 1.14;
   }
 }
 .header__address-link:hover, .header__address-link:focus {
@@ -365,6 +365,7 @@ img {
   .card__item {
     width: calc(50% - 30px);
     margin-right: 30px;
+    margin-bottom: 30px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -380,7 +381,9 @@ img {
 
 .card__link {
   height: 100%;
-  display: inline-block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -389,7 +392,6 @@ img {
   transition: -webkit-box-shadow 250ms var(--time-function);
   transition: box-shadow 250ms var(--time-function);
   transition: box-shadow 250ms var(--time-function), -webkit-box-shadow 250ms var(--time-function);
-  text-decoration: none;
 }
 .card__link:hover, .card__link:focus {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
@@ -834,6 +836,14 @@ img {
   display: -ms-flexbox;
   display: flex;
   gap: 20px;
+}
+
+.mobile-menu__networks-item:not(:last-child)::after {
+  content: "";
+  width: 22px;
+  height: 0;
+  margin-left: 10px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
 }
 
 .mobile-menu__networks-link {
