--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -13,6 +13,7 @@
   @media screen and (min-width:768px) {
     width: calc(100% / 2 - 30px);
     margin-right: 30px;
+    margin-bottom: 30px;
   }
   @media screen and (min-width:1200px) {
     width: calc(100% / 3 - 30px);
@@ -27,10 +28,9 @@
 .card__link {
   @extend %link;
   height: 100%;
-  display: inline-block;
+  display: flex;
   flex-direction: column;
   transition: box-shadow 250ms var(--time-function);
-  text-decoration: none;
 
   &:hover,
   &:focus {
