--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -103,13 +103,13 @@
       fill: currentColor;
       font-weight: 500;
       font-size: 12px;
-      line-height: calc(14/12);
+      line-height: 1.17;
       letter-spacing: 0.02em;
       transition: color 250ms var(--time-function);
       
       @media screen and (min-width:1200px) {
         font-size: 14px;
-        line-height: calc(16/14);
+        line-height: 1.14;
       }
 
           &:hover,
