--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -14,7 +14,7 @@
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
       background-image: var(--hero-gradient),
-      url(../img/hero2x-m.jpg);
+      url(../img/hero-m_2x.jpg);
     }
 
   background-repeat: no-repeat;
@@ -30,7 +30,7 @@
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
           background-image: var(--hero-gradient),
-          url(../img/hero2x-t.jpg);
+          url(../img/hero-t_2x.jpg);
         }
     }
 
