--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -119,6 +119,14 @@
   gap: 20px;
 }
 
+.mobile-menu__networks-item:not(:last-child)::after {
+  content: '';
+  width: 22px;
+  height: 0;
+  margin-left: 10px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+}
+
 .mobile-menu__networks-link {
   @extend %link;
   font-weight: 500;
