--- a/sass/components/_feature.scss
+++ b/sass/components/_feature.scss
@@ -1,21 +1,31 @@
 .feature__list {
   @extend %list;
-  @media screen and (min-width:768px) {
+
+  @media screen and (min-width: 768px){
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap;
     gap: 30px;
   }
-
   @media screen and (min-width: 1200px){
     flex-direction: row;
-  }
+    }
 }
 
 .feature__item {
-  width: 100%;
-  @media screen and (min-width:768px) {
-    width: 354px;
+  @media screen and (max-width: 767px) {
+    width: 450px;
+    margin-bottom: 30px;
   }
+
+  &--last {
+    margin-bottom: 0;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: 354px;
+    margin-bottom: 0;
+  }
+
   @media screen and (min-width:1200px) {
     width: 270px;
   }
@@ -30,7 +40,11 @@
   align-items: center;
   border-radius: 4px;
   background-color: var(--section-team-bg-color);
-  @media screen and (min-width:768px) {
+
+  @media screen and (max-width:767px) {
+    width: 450px;
+  }
+  @media screen and (min-width:768px) and (max-width:1199px) {
     width: 354px;
   }
   @media screen and (min-width:1200px) {
@@ -39,21 +53,21 @@
 }
 
 .feature__title {
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--secondory-font-color);
   margin-bottom: 10px;
-  @media screen and (max-width:767px){
-    text-align: center;
-  }
+    color: var(--secondory-font-color);
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    @media screen and (max-width:767px){
+      text-align: center;
+    }
 }
 
 .feature__text {
+  width: 100%;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  width: 100%;
   @media screen and (min-width:768px) {
     width: 354px;
   }
