--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -149,10 +149,10 @@
   border-radius: 4px;
   outline: none;
   background-color: var(--boder-bg-color);
-  @media screen and (min-width:768px) {
-    width: 450px;
+  @media screen and (max-width:767px) {
+    margin-bottom: 20px;
   }
-  @media screen  and (min-width:1200px) {
+  @media screen and (min-width:768px) and (min-width:1200px) {
     width: 358px;
     margin-right: 12px;
     margin-bottom: 0;
