--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -660,12 +660,12 @@ img {
   outline: none;
   background-color: var(--boder-bg-color);
 }
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 767px) {
   .footer-form__input {
-    width: 450px;
+    margin-bottom: 20px;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) and (min-width: 1200px) {
   .footer-form__input {
     width: 358px;
     margin-right: 12px;
@@ -775,7 +775,7 @@ img {
 
 .mobile-menu__link {
   font-weight: 500;
-  font-size: 30px;
+  font-size: 40px;
   line-height: 1.23;
   letter-spacing: 0.02em;
   color: var(--secondory-font-color);
@@ -790,16 +790,20 @@ img {
   color: var(--accent-color);
 }
 
+.mobile-menu__link--current {
+  color: var(--accent-color);
+}
+
 .mobile-menu__contact {
   margin-bottom: 64px;
 }
 
 .mobile-menu__contact-tel {
   font-weight: 500;
-  font-size: 22px;
+  font-size: 34px;
   line-height: 1.22;
   letter-spacing: 0.02em;
-  color: var(--main-font-color);
+  color: var(--accent-color);
   display: inline-block;
   width: 100%;
   margin-bottom: 32px;
