--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -56,7 +56,7 @@
 .mobile-menu__link {
   @extend %link;
   font-weight: 500;
-  font-size: 30px;
+  font-size: 40px;
   line-height: 1.23;
   letter-spacing: 0.02em;
   color: var(--secondory-font-color);
@@ -70,6 +70,10 @@
   }
 }
 
+.mobile-menu__link--current {
+  color: var(--accent-color);
+}
+
 .mobile-menu__contact {
   @extend %list;
   margin-bottom: 64px;
@@ -78,10 +82,10 @@
 .mobile-menu__contact-tel {
   @extend %link;
   font-weight: 500;
-  font-size: 22px;
+  font-size: 34px;
   line-height: 1.22;
   letter-spacing: 0.02em;
-  color: var(--main-font-color);
+  color: var(--accent-color);
   display: inline-block;
   width: 100%;
   margin-bottom: 32px;
