--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -61,9 +61,10 @@
   justify-content: center;
   align-items: center;
   gap: 10px;
+}
 
-  &__link {
-    @extend %link;
+.icon__link {
+  @extend %link;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -81,5 +82,4 @@
         color: var(--main-light-color);
         background-color: var(--accent-color);
       }
-    }
 }
